--- a/styles/style.css
+++ b/styles/style.css
@@ -242,3 +242,119 @@ header .desktop-menu {
   color: var(--very-dark-blue);
   font-weight: 800;
 }
+
+@media screen and (min-width: 1300px) {
+  .container {
+    max-width: 1200px;
+    margin: 32px auto;
+  }
+
+  header {
+    overflow: auto;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  header .desktop-menu {
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .mobile-menu {
+    display: none;
+  }
+
+  .desktop-menu a {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--very-dark-blue);
+  }
+
+  .desktop-menu a:active,
+  .desktop-menu a:hover {
+    color: var(--soft-orange);
+  }
+
+  main {
+    margin: 60px 0 30px 0;
+  }
+
+  .grid-area {
+    display: grid;
+    grid-template-areas:
+      "main-post main-post main-post side-bar"
+      "top-list top-list top-list top-list";
+  }
+
+  .main-post {
+    display: grid;
+    grid-area: main-post;
+    margin-right: 32px;
+
+    grid-template-areas:
+      "main-img main-img main-img"
+      "main-title main-paragraph main-paragraph"
+      "main-title main-btn main-btn";
+  }
+
+  .main-post img {
+    height: 370px;
+    width: 100%;
+    object-fit: cover;
+    grid-area: main-img;
+  }
+
+  .main-post h1 {
+    grid-area: main-title;
+    font-size: 50px;
+    line-height: 50px;
+  }
+
+  .main-post p {
+    grid-area: main-paragraph;
+    font-size: 16px;
+  }
+
+  .main-post button {
+    grid-area: main-btn;
+    width: 50%;
+    cursor: pointer;
+    transition: all 0.4s;
+  }
+
+  .main-post button:hover {
+    background: var(--soft-orange);
+  }
+
+  .side-bar {
+    grid-area: side-bar;
+    margin: 0;
+  }
+
+  .main-post,
+  .side-bar {
+    margin-bottom: 32px;
+  }
+
+  .top-post-list {
+    grid-area: top-list;
+    flex-direction: row;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .container {
+    max-width: 1300px;
+    margin: 32px auto;
+  }
+}
+
+@media screen and (min-width: 1500px) {
+  .container {
+    max-width: 1440px;
+    margin: 32px auto;
+  }
+}
