--- a/styles/style.css
+++ b/styles/style.css
@@ -13,8 +13,8 @@
 }
 
 .container {
-  max-width: 375px;
-  margin: 0 16px;
+  max-width: 85%;
+  margin: 0 auto;
   height: 100vh;
 }
 
@@ -243,9 +243,22 @@ header .desktop-menu {
   font-weight: 800;
 }
 
-@media screen and (min-width: 1300px) {
+/* MEDIAS */
+
+@media screen and (min-width: 830px) {
+  .main-post img {
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+  }
+
+  .main-post button {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .container {
-    max-width: 1200px;
     margin: 32px auto;
   }
 
@@ -342,13 +355,6 @@ header .desktop-menu {
   .top-post-list {
     grid-area: top-list;
     flex-direction: row;
-  }
-}
-
-@media screen and (min-width: 1400px) {
-  .container {
-    max-width: 1300px;
-    margin: 32px auto;
   }
 }
 
